--- a/src/index.html
+++ b/src/index.html
@@ -153,7 +153,7 @@
         <button class="janus__link">VISIT WEBSITE</button>
       </div>
       
-      <div class="case__display case__display--dataplay">
+      <div class="case__display case__display--dataplay hidden">
         <h3>Project Dataplay - McDollars</h4>
         <p>2025, fetch and JavaScript developer</p>
         <p>Project Dataplay was a school project centered around the use of data to create an interactive experience. McDollars is centered around the Big Mac Index, the cost of its ingredients, and whether it relates to global inflation.</p>
