HTML, CSS, JS, Assets
Added arrow image

HTML : Added arrow image in HTML
CSS: Sticky nav + arrow image styles
JS: Arrow image script + fixed burger menu buttons

--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,7 @@
 
     <nav class="header__nav">
       <ul class="header__ul header__sections">
+
         <li class="header__buttons header__buttons--aboutme">ABOUT ME</li>
         <li class="header__buttons header__buttons--case">CASE STUDIES</li>
         <li class="header__buttons header__buttons--projects">PROJECTS</li>
@@ -41,6 +42,11 @@
       </ul>
 
       <ul class="header__ul header__case hidden">
+
+        <div class="header__arrow hidden">
+          <img src="./assets/images/arrow.svg" alt="Go back button">
+        </div>
+
         <li class="header__buttons header__janus">
           JANUS
         </li>
@@ -51,6 +57,11 @@
       </ul>
 
       <ul class="header__ul header__projects hidden">
+
+        <div class="header__arrow hidden">
+          <img src="./assets/images/arrow.svg" alt="Go back button">
+        </div>
+
         <li class="header__buttons header__projects--janus">
           JANUS
         </li>
