--- a/src/index.html
+++ b/src/index.html
@@ -88,6 +88,9 @@
     </div>
 
     <section class="intro hidden">
+
+      <div class="intro__background"></div>
+
       <div class="intro__page">
         <h1>Hi! My name is Benjamin</h1>
 
