--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Accueil - Benjamin Brihaye</title>
+  <title>Homepage - Benjamin Brihaye</title>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <meta name="description" content="">
-  <!-- Meta Partage -->
-  <!-- Favicon -->
+  <meta name="description" content="Homepage of Benjamin Brihaye, Web Design student">
+  <meta name="keywords" content="HTML, CSS, JavaScript, Benjamin Brihaye, Benjamin, Brihaye, Web Design, Web, Code, Coding, benjaminbrihaye.com, benjaminbrihaye.be, portfolio, student, web design student, web design, web developer, web development, web designer, web developer student, web development student">
+  <meta name="author" content="Benjamin Brihaye">
+
+  <meta property="og:site_name" content="benjaminbrihaye.com">
+  <meta property="og:title" content="Homepage - Benjamin Brihaye">
+  <meta property="og:description" content="Homepage of Benjamin Brihaye, Web Design student">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.benjaminbrihaye.com/">
+  <meta property="og:image" content="https://www.benjaminbrihaye.com/favimage.png">
+  <meta property="og:image:width" content="1800">
+  <meta property="og:image:height" content="945">
+
+  <link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="styles/app.css">
@@ -62,19 +74,19 @@
           <img src="./assets/images/arrow.svg" alt="Go back button">
         </div>
 
-        <li class="header__buttons header__projects--janus">
+        <li class="header__buttons header__projects--janus janus__link">
           JANUS
         </li>
 
-        <li class="header__buttons header__projects--dataplay">
+        <li class="header__buttons header__projects--dataplay dataplay__link">
           MCDOLLARS
         </li>
 
-        <li class="header__buttons header__projects--lol">
+        <li class="header__buttons header__projects--lol lol__link">
           LOL
         </li>
 
-        <li class="header__buttons header__projects--decembre">
+        <li class="header__buttons header__projects--decembre decembre__link">
           DECEMBRE
         </li>
       </ul>
