HTML, CSS, JS, Assets
Added Design fiction assets

HTML : Design fiction section + button

CSS : Fixed intro section not taking all height because of header height

JS: Script for Design Fiction

--- a/src/index.html
+++ b/src/index.html
@@ -78,6 +78,10 @@
           JANUS
         </li>
 
+        <li class="header__buttons header__projects--designfiction designfiction__link">
+          DESIGN FICTION
+        </li>
+
         <li class="header__buttons header__projects--dataplay dataplay__link">
           MCDOLLARS
         </li>
@@ -272,6 +276,13 @@ The second part appears after clicking the button in the first part. On the left
         <p>Project Decembre was a project targeted at creating a landing page to buy a product, which we had to choose from a list. My project was around the book “La Main Gauche de la Nuit“ Ursule K. Le Gain.</p>
         <img src="./assets/images/final-decembre.png" alt="Final design of Decembre" srcset="./assets/images/@2x/final-decembre@2x.png 2x">
         <a href="https://www.benjaminbrihaye.com/projets/decembre/" class="projects__link decembre__link">VISIT WEBSITE</a>
+      </div>
+
+      <div class="projects__display projects__display--designfiction hidden">
+        <h3>Project Design Fiction - KEB</h4>
+        <p>Project Design Fiction is a project asking us to think about an idea from the near future and doing a website about it. I decided to do something about robotic bees. KEB is a fictional website about a rebel group against those robotic bees.</p>
+        <img src="./assets/images/designfiction.png" alt="Final design of Design Fiction" srcset="./assets/images/@2x/designfiction@2x.png 2x">
+        <a href="https://www.benjaminbrihaye.com/projets/designfiction/" class="projects__link designfiction__link">VISIT WEBSITE</a>
       </div>
     </section>
 
