--- a/src/index.html
+++ b/src/index.html
@@ -109,7 +109,7 @@
 
         <div class="intro__date">
           <h2 class="intro__fulldate">Web Design Student</h2>
-          <h2 class="intro__hour">Haute Ecole Albert Jacquard</h2>
+          <h2 class="intro__hour">HTML, CSS, JS, JSON</h2>
         </div>
       </div>
     </section>
