--- a/src/index.html
+++ b/src/index.html
@@ -74,6 +74,9 @@
         </div>
 
         <ul class="header__ul header__projects">
+          <li class="header__buttons header__projects--grind grind__link">
+            GRIND
+          </li>
           <li class="header__buttons header__projects--janus janus__link">
             JANUS
           </li>
@@ -162,9 +165,9 @@
             <h4>Mangas</h4>
             <ol>
               <li>Assassination Classroom</li>
-              <li>Blue Lock</li>
               <li>Frieren</li>
               <li>Chainsaw Man</li>
+              <li>DanDaDan</li>
             </ol>
           </div>
         </div>
@@ -248,6 +251,13 @@ The second part appears after clicking the button in the first part. On the left
     </section>
     
     <section class="projects hidden">
+
+      <div class="projects__display projects__display--grind hidden">
+        <h3>Project iLab - Grind</h3>
+        <p>iLab is a project about creating a game about disabilities. For Grind, we choose obesity. In Grind, you walk forward on an infinite map, avoid bad habits and monsters, and become fit. The game was made using Construct 2.</p>
+        <img src="./assets/images/grind.png" alt="Final design of project iLab" srcset="./assets/images/@2x/grind@2x.png 2x">
+        <a href="https://www.benjaminbrihaye.com/projets/grind/" class="projects__link grind__link">VISIT WEBSITE</a>
+      </div>
 
       <div class="projects__display projects__display--janus hidden">
         <h3>Project Janus - CallMeCarson</h3>
