--- a/src/index.html
+++ b/src/index.html
@@ -119,7 +119,7 @@
 
     <section class="aboutme hidden">
       <div class="aboutme__image">
-        <img src="./assets/images/logo.png" alt="Logo" srcset="./assets/images/@2x/logo@2x.png 2x">
+        <img src="./assets/images/logo-1.png" alt="Logo" srcset="./assets/images/@2x/logo-1@2x.png 2x">
       </div>
 
       <h3 class="hidden">ABOUT ME</h3>
